Switch to Precise on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: precise
 language: c
 
 rvm:
@@ -8,7 +9,6 @@ compiler:
 
 before_install:
  - echo "yes" | sudo add-apt-repository ppa:ubuntugis/ppa
- - echo "yes" | sudo add-apt-repository ppa:kalakris/cmake
  - sudo apt-get update -qq
  - sudo apt-get install libgeos-3.3.8 libgeos-c1 libgeos-dev
  - sudo apt-get install cmake
