--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: precise
+dist: trusty
 language: c
 
 rvm:
@@ -9,7 +9,6 @@ compiler:
 
 before_install:
  - echo "yes" | sudo add-apt-repository ppa:ubuntugis/ppa
- - echo "yes" | sudo add-apt-repository ppa:george-edison55/precise-backports
  - sudo apt-get update -qq
  - sudo apt-get install libgeos-3.3.8 libgeos-c1 libgeos-dev
  - sudo apt-get install cmake
