--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ compiler:
 before_install:
  - echo "yes" | sudo add-apt-repository ppa:ubuntugis/ppa
  - sudo apt-get update -qq
- - sudo apt-get install libgeos-3.3.8 libgeos-c1 libgeos-dev
+ - sudo apt-get install libgeos-3.5.0 libgeos-c1v5 libgeos-dev
  - sudo apt-get install cmake
 
 before_script:
