Adding Dockerfile for Go

--- a/Dockerfile.golang
+++ b/Dockerfile.golang
@@ -3,6 +3,7 @@ FROM golang:1.10-alpine3.7
 RUN apk add --no-cache build-base
 RUN apk add --no-cache build-base gcc abuild binutils binutils-doc gcc-doc
 RUN apk add --no-cache cmake cmake-doc
+RUN apk add --no-cache git
 
 RUN mkdir /code
 ADD . /code
@@ -10,4 +11,6 @@ WORKDIR /code
 
 RUN cmake .
 RUN make install
+
+RUN go get -u github.com/golang/dep/cmd/dep
 
